Fix a checkbox column layout bug during Project name resize

--- a/jsapp/js/projects/projectsTable/projectsTableRow.module.scss
+++ b/jsapp/js/projects/projectsTable/projectsTableRow.module.scss
@@ -39,7 +39,7 @@ $projects-table-hover-bg: colors.$kobo-gray-98;
   &[data-field='checkbox'] {
     // Checkbox has double padding on the right to make for a more forgiving
     // touch target
-    min-width: sizes.$x18 + sizes.$x20 + sizes.$x36;
+    max-width: sizes.$x18 + sizes.$x20 + sizes.$x36;
     width: sizes.$x18 + sizes.$x20 + sizes.$x36;
     padding-right: sizes.$x36;
     @include mixins.centerRowFlex;
